# smallpdf_clone

./: README.md  main.py  pyproject.toml  requirements.txt
config/: __init__.py  app_config.py  file_config.py  ocr_config.py  pdf_config.py  theme.py
screens/: home.kv
