[project]
name = "smallpdf-clone"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "kivy>=2.3.1",
    "kivymd>=1.2.0",
    "opencv-python>=4.12.0.88",
    "pdf2image>=1.17.0",
    "pikepdf>=9.9.0",
    "pillow>=11.3.0",
    "plyer>=2.1.0",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.2.0",
    "reportlab>=4.4.2",
]
